# arrayfire-python

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  __af_version__.py  arrayfire.algorithm.html  arrayfire.arith.html  arrayfire.array.html  arrayfire.base.html  arrayfire.bcast.html  arrayfire.blas.html  arrayfire.cuda.html  arrayfire.data.html  arrayfire.device.html  arrayfire.features.html  arrayfire.graphics.html  arrayfire.html  arrayfire.image.html  arrayfire.index.html  arrayfire.interop.html  arrayfire.lapack.html  arrayfire.library.html  arrayfire.opencl.html  arrayfire.random.html  arrayfire.signal.html  arrayfire.sparse.html  arrayfire.statistics.html  arrayfire.timer.html  arrayfire.util.html  arrayfire.vision.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  (+4 more)
.github/workflows/: build.yaml
_modules/: index.html
_modules/arrayfire/: algorithm.html  arith.html  array.html  base.html  bcast.html  blas.html  cuda.html  data.html  device.html  features.html  graphics.html  image.html  index.html  interop.html  lapack.html  library.html  opencl.html  random.html  signal.html  sparse.html  statistics.html  timer.html  util.html  vision.html
_sources/: arrayfire.algorithm.txt  arrayfire.array.txt  arrayfire.bcast.txt  arrayfire.blas.rst.txt  arrayfire.cuda.rst.txt  arrayfire.data.rst.txt  arrayfire.device.rst.txt  arrayfire.features.txt  arrayfire.graphics.txt  arrayfire.image.txt  arrayfire.index.rst.txt  arrayfire.interop.rst.txt  arrayfire.lapack.txt  arrayfire.library.txt  arrayfire.opencl.txt  arrayfire.rst.txt  arrayfire.signal.txt  arrayfire.sparse.rst.txt  arrayfire.txt  arrayfire.util.txt  arrayfire.vision.rst.txt  modules.txt
_static/: documentation_options.js  style.css
arrayfire/: __init__.py  algorithm.py  arith.py  array.py  base.py  bcast.py  blas.py  broadcast.py  cuda.py  data.py  device.py  features.py  graphics.py  image.py  index.py  interop.py  lapack.py  library.py  ml.py  opencl.py  random.py  signal.py  sparse.py  statistics.py  timer.py  util.py  vision.py
arrayfire/array_api/: README.md  __init__.py  _array_object.py  _dtypes.py  _utils.py  array_object.py  config.py  device.py  dtype_functions.py  dtypes.py  operators.py  pytest.ini  utils.py
arrayfire/tests/: __init__.py  __main__.py
docs/: Makefile  arrayfire.algorithm.rst  arrayfire.arith.rst  arrayfire.base.rst  arrayfire.ml.rst  arrayfire.random.rst  arrayfire.rst  arrayfire.statistics.rst  arrayfire.timer.rst  conf.py  index.rst  make.bat
docs/_static/: style.css
examples/: helloworld.py  monte_carlo_pi.py  plot2d.py
examples/benchmarks/: bench_blas.py  bench_cg.py  bench_fft.py  monte_carlo_pi.py
examples/common/: idxio.py
examples/computer_vision/: fast.py  harris.py  matching.py  susan.py
examples/financial/: black_scholes_options.py  heston_model.py  monte_carlo_options.py
examples/getting_started/: convolve.py  intro.py
examples/graphics/: conway.py  fractal.py  histogram.py  plot2d.py  plot3.py  surface.py
examples/helloworld/: helloworld.py
examples/lin_algebra/: cholesky.py  lu.py  qr.py
examples/machine_learning/: logistic_regression.py  mnist_common.py
tests/: __init__.py  __main__.py  simple_algorithm.py  simple_arith.py  simple_array.py  simple_blas.py  simple_data.py  simple_device.py  simple_image.py  simple_index.py  simple_lapack.py  simple_signal.py  simple_statistics.py  simple_tests.py
(+59 files in other folders)
