[metadata]
name = arrayfire
version = 3.7.20201113
description = Python bindings for ArrayFire
licence = BSD
long_description = file: README.md
maintainer = ArrayFire
maintainer_email = technical@arrayfire.com
url = http://arrayfire.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6.0
setup_requires =
    pytest-runner
tests_require =
    flake8-import-order
    flake8-quotes
    pytest-cov
    pytest-flake8
    pytest-mypy

[options.packages.find]
exclude =
    examples
    tests

[aliases]
test = pytest

[flake8]
application-import-names = arrayfire
import-order-style = pep8
max-line-length = 119

[tool:pytest]
addopts = --cache-clear --cov=arrayfire --cov-fail-under=70
console_output_style = classic

[coverage:report]
show_missing = true
skip_covered = true
