[metadata]
name = arrayfire
version = 3.8.0
description = Python bindings for ArrayFire
licence = BSD
long_description = file: README.md
maintainer = ArrayFire
maintainer_email = technical@arrayfire.com
url = http://arrayfire.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires=
    scikit-build

[options.packages.find]
include = arrayfire
exclude =
    examples
    tests

[flake8]
application-import-names = arrayfire
import-order-style = pep8
max-line-length = 119
